@@ -42,7 +42,10 @@ struct async_operation_class {
 
 struct async_operation {
     struct async_operation_class class;
+
 #ifndef NDEBUG
+    bool finished;
+
     int aborted;
 #endif
 };
@@ -64,8 +67,26 @@ async_init(struct async_operation *ao,
            const struct async_operation_class *class)
 {
     ao->class = *class;
+
 #ifndef NDEBUG
+    ao->finished = false;
     ao->aborted = 0;
+#endif
+}
+
+/**
+ * Mark this operation as "finished".  This is a no-op in the NDEBUG
+ * build.
+ */
+static inline void
+async_operation_finished(struct async_operation *ao __attr_unused)
+{
+    assert(ao != NULL);
+    assert(!ao->finished);
+    assert(!ao->aborted);
+
+#ifndef NDEBUG
+    ao->finished = true;
 #endif
 }
 
@@ -101,6 +122,7 @@ async_ref_set(struct async_operation_ref *ref,
 {
     assert(ref != NULL);
     assert(ao != NULL);
+    assert(!ao->finished);
     assert(!ao->aborted);
 
     ref->operation = ao;
@@ -110,6 +132,7 @@ static inline void
 async_operation_abort(struct async_operation *ao)
 {
     assert(ao != NULL);
+    assert(!ao->finished);
     assert(!ao->aborted);
 
 #ifndef NDEBUG
