@@ -3,6 +3,7 @@ cm4all-beng-proxy (0.7.42) unstable; urgency=low
   * fork: check "direct" flag again after buffer flush
   * pool: pool_unref_denotify() remembers the code location
   * sink-{buffer,gstring}: don't invoke callback in abort()
+  * async: added another debug flag to verify correctness
 
  --
 
